[gd_scene load_steps=9 format=3 uid="uid://db782epqh7e8w"]

[ext_resource type="Script" uid="uid://bq1c8fjld7uxe" path="res://game_over.gd" id="1_8u835"]
[ext_resource type="AudioStream" uid="uid://44gomhetep4l" path="res://Assets/happyEnd.mp3" id="1_y26ei"]
[ext_resource type="Texture2D" uid="uid://c365id8bo5873" path="res://Assets/koirapois1.png" id="2_ccer4"]
[ext_resource type="Texture2D" uid="uid://k5i4efassykq" path="res://Assets/koirapois2.png" id="3_8u835"]
[ext_resource type="Texture2D" uid="uid://bvge74c8o4pln" path="res://Assets/skorebore.png" id="5_ftari"]
[ext_resource type="Texture2D" uid="uid://cj44eb4bo2lnl" path="res://Assets/polis2.png" id="6_28vn7"]
[ext_resource type="PackedScene" uid="uid://q3x4qfijup8u" path="res://score_board.tscn" id="7_k2vha"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ftari"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": ExtResource("2_ccer4")
}, {
"duration": 2.51,
"texture": ExtResource("3_8u835")
}],
"loop": true,
"name": &"kavely",
"speed": 5.0
}]

[node name="game_over" type="Node2D"]
script = ExtResource("1_8u835")

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_y26ei")
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1164.0
offset_bottom = 664.0
color = Color(0.847059, 1, 1, 1)

[node name="littleDog" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(928, 478)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_ftari")
animation = &"kavely"
flip_h = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 300)
scale = Vector2(0.708984, 0.801282)
texture = ExtResource("5_ftari")

[node name="Polis2" type="Sprite2D" parent="."]
top_level = true
position = Vector2(220, 391)
scale = Vector2(5.5, 5.5)
texture = ExtResource("6_28vn7")

[node name="NamePopi" type="PopupPanel" parent="."]
position = Vector2i(425, 120)
size = Vector2i(300, 121)

[node name="VBoxContainer" type="VBoxContainer" parent="NamePopi"]
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 117.0

[node name="Label" type="Label" parent="NamePopi/VBoxContainer"]
layout_mode = 2
text = "Enter your name:"

[node name="NameInput" type="LineEdit" parent="NamePopi/VBoxContainer"]
layout_mode = 2
max_length = 8

[node name="Button" type="Button" parent="NamePopi/VBoxContainer"]
layout_mode = 2
text = "OK"

[node name="ScoreBoard" parent="." instance=ExtResource("7_k2vha")]
z_index = 3
offset_left = 380.0
offset_top = 114.0
offset_right = 380.0
offset_bottom = 114.0
